@@ -1,0 +1,84 @@
+# Copyright (C) 2007 Canonical Ltd
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+"""Tests for repository write groups."""
+
+from bzrlib import errors
+from bzrlib.tests.repository_implementations.test_repository import TestCaseWithRepository
+
+
+class TestWriteGroup(TestCaseWithRepository):
+
+    def test_start_write_group_unlocked_needs_write_lock(self):
+        repo = self.make_repository('.')
+        self.assertRaises(errors.NotWriteLocked, repo.start_write_group)
+
+    def test_start_write_group_read_locked_needs_write_lock(self):
+        repo = self.make_repository('.')
+        repo.lock_read()
+        try:
+            self.assertRaises(errors.NotWriteLocked, repo.start_write_group)
+        finally:
+            repo.unlock()
+
+    def test_start_write_group_write_locked_gets_None(self):
+        repo = self.make_repository('.')
+        repo.lock_write()
+        self.assertEqual(None, repo.start_write_group())
+        repo.end_write_group()
+        repo.unlock()
+
+    def test_start_write_group_twice_errors(self):
+        repo = self.make_repository('.')
+        repo.lock_write()
+        repo.start_write_group()
+        try:
+            # don't need a specific exception for now - this is 
+            # really to be sure it's used right, not for signalling
+            # semantic information.
+            self.assertRaises(errors.BzrError, repo.start_write_group)
+        finally:
+            repo.end_write_group()
+            repo.unlock()
+
+    def test_end_write_group_gets_None(self):
+        repo = self.make_repository('.')
+        repo.lock_write()
+        repo.start_write_group()
+        self.assertEqual(None, repo.end_write_group())
+        repo.unlock()
+
+    def test_unlock_after_start_errors(self):
+        repo = self.make_repository('.')
+        repo.lock_write()
+        repo.start_write_group()
+        # don't need a specific exception for now - this is 
+        # really to be sure it's used right, not for signalling
+        # semantic information.
+        self.assertRaises(errors.BzrError, repo.unlock)
+        self.assertTrue(repo.is_locked())
+        repo.end_write_group()
+        repo.unlock()
+
+    def test_is_in_write_group(self):
+        repo = self.make_repository('.')
+        self.assertFalse(repo.is_in_write_group())
+        repo.lock_write()
+        repo.start_write_group()
+        self.assertTrue(repo.is_in_write_group())
+        repo.end_write_group()
+        self.assertFalse(repo.is_in_write_group())
+        repo.unlock()
